--- a/index.html
+++ b/index.html
@@ -1,35 +1,156 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>english or spanish</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      height: 100vh;
+      height: 100%;
+      font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: Arial;
-      font-size: 32px;
-      user-select: none;
+      overflow: hidden;
+      cursor: pointer;
+      transition: background 0.5s;
     }
-    #page2 { display: none; }
+
+    #page1, #page2 {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    #page1 {
+      background: linear-gradient(135deg, #60a5fa, #3b82f6);
+      color: white;
+      font-size: 48px;
+      text-align: center;
+    }
+
+    #tooltip {
+      margin-top: 20px;
+      font-size: 20px;
+      opacity: 0.8;
+      animation: pulse 1s infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+    }
+
+    #page2 {
+      background: #111827;
+      color: #facc15;
+      font-size: 48px;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+    }
   </style>
 </head>
 <body>
-  <div id="page1" onclick="goToPage2()">
+
+  <!-- PAGE 1 -->
+  <div id="page1">
     english or spanish
+    <div id="tooltip">🖱 Click me!</div>
   </div>
+
+  <!-- PAGE 2 -->
   <div id="page2">
     if you move you are hajesh
   </div>
-  
+
+  <canvas id="confetti"></canvas>
+
   <script>
-    function goToPage2() {
-      document.getElementById("page1").style.display = "none";
-      document.getElementById("page2").style.display = "flex";
+    const page1 = document.getElementById('page1');
+    const page2 = document.getElementById('page2');
+    const confettiCanvas = document.getElementById('confetti');
+    const ctx = confettiCanvas.getContext('2d');
+
+    confettiCanvas.width = window.innerWidth;
+    confettiCanvas.height = window.innerHeight;
+
+    let confettiParticles = [];
+
+    function createConfetti() {
+      for (let i = 0; i < 150; i++) {
+        confettiParticles.push({
+          x: Math.random() * confettiCanvas.width,
+          y: Math.random() * confettiCanvas.height - confettiCanvas.height,
+          r: Math.random() * 6 + 4,
+          d: Math.random() * 40 + 10,
+          color: `hsl(${Math.random()*360},100%,50%)`,
+          tilt: Math.random() * 10 - 10,
+          tiltAngleIncremental: Math.random() * 0.07 + 0.05,
+          tiltAngle: 0
+        });
+      }
     }
+
+    function drawConfetti() {
+      ctx.clearRect(0, 0, confettiCanvas.width, confettiCanvas.height);
+      for (let i = 0; i < confettiParticles.length; i++) {
+        let p = confettiParticles[i];
+        ctx.beginPath();
+        ctx.lineWidth = p.r / 2;
+        ctx.strokeStyle = p.color;
+        ctx.moveTo(p.x + p.tilt + p.r / 4, p.y);
+        ctx.lineTo(p.x + p.tilt, p.y + p.tilt + p.r / 4);
+        ctx.stroke();
+      }
+      updateConfetti();
+    }
+
+    function updateConfetti() {
+      for (let i = 0; i < confettiParticles.length; i++) {
+        let p = confettiParticles[i];
+        p.tiltAngle += p.tiltAngleIncremental;
+        p.y += (Math.cos(p.d) + 3 + p.r / 2) / 2;
+        p.tilt = Math.sin(p.tiltAngle) * 15;
+
+        if (p.y > confettiCanvas.height) {
+          p.y = -10;
+          p.x = Math.random() * confettiCanvas.width;
+        }
+      }
+    }
+
+    let confettiInterval;
+
+    function startConfetti() {
+      createConfetti();
+      confettiInterval = setInterval(drawConfetti, 20);
+    }
+
+    // Click event to switch pages
+    page1.addEventListener('click', () => {
+      page1.style.display = 'none';
+      page2.style.display = 'flex';
+      startConfetti();
+    });
+
+    // Resize canvas on window resize
+    window.addEventListener('resize', () => {
+      confettiCanvas.width = window.innerWidth;
+      confettiCanvas.height = window.innerHeight;
+    });
   </script>
 </body>
 </html>
